# mlops-project-taxi-trip-duration-prediction

./: README.md  main.py  pyproject.toml
01-intro/: homework.ipynb
notebooks/: homework_1.ipynb
