[project]
name = "taxi-trip-duration-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "mlflow>=3.1.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
